# syzygy-rs

./: README.md
example/: Cargo.toml
example/src/: main.rs  user.rs
jsonapi/: Cargo.toml
jsonapi/src/: document.rs  lib.rs  resource.rs  types.rs
jsonapi_derive/: Cargo.toml
jsonapi_derive/src/: lib.rs
syzygy/: Cargo.toml
syzygy/src/: api.rs  endpoint.rs  lib.rs  router.rs
syzygy/src/api/: deserializer.rs  serializer.rs
syzygy/src/endpoint/: deserializer.rs  dispatcher.rs  manager.rs  mod.rs  model.rs  request.rs  serializer.rs  view.rs
syzygy/src/error/: mod.rs
syzygy/src/helper/: manager.rs  mod.rs  serializer.rs
syzygy/src/http/: mod.rs
syzygy/src/request/: action.rs  mod.rs  options.rs
syzygy/src/response/: mod.rs  reaction.rs
syzygy/src/router/: cursor.rs  mod.rs  request.rs  response.rs  route.rs  simple.rs
syzygy/src/server/http/: router.rs
syzygy/src/view/: disallowed.rs  method.rs  mod.rs
syzygy/src/view/actions/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
syzygy/src/view/component/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
syzygy/src/view/composite/: disallowed.rs  list.rs  method.rs  mod.rs
syzygy/src/view/composite/action/: create.rs  delete.rs  list.rs  mod.rs  retrieve.rs  update.rs
syzygy/src/view/parameters/: mod.rs
syzygy/src/view/resource/: method.rs  mod.rs
syzygy/src/view/resource/actions/: list.rs  mod.rs
syzygy/src/view/resource/peripheral/: deserializer.rs  mod.rs
