[package]
name = "example"
version = "0.1.0"
authors = ["Noah Kim <noahbkim@gmail.com>"]
edition = "2018"

[dependencies]
syzygy = { path = "../syzygy" }
jsonapi = { path = "../jsonapi" }
jsonapi_derive = { path = "../jsonapi_derive" }
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
