[package]
name = "syzygy"
version = "0.1.0"
authors = ["Noah Kim <noahbkim@gmail.com>"]
edition = "2018"

[dependencies]
jsonapi = { path = "../jsonapi" }
jsonapi_derive = { path = "../jsonapi_derive" }
hyper = { version = "0.14.2", features = ["server", "runtime", "http1", "http2"] }
tokio = { version = "1.2.0", features = ["full"] }
serde_json = "1.0.61"
async-trait = "0.1.42"
url = "2.2.1"
